# fastapi-hexagonal-architecture-example

./: Dockerfile  README.md  compose.yaml  pyproject.toml
kind/: README.md  config.yaml  deployment.yaml  hpa.yaml  service.yaml
src/: database.py  main.py
src/adapters/inbound/: __init__.py
src/adapters/inbound/controllers/: __init__.py  user.py  user_router.py  users.py
src/adapters/inbound/dtos/: __init__.py  user.py  user_dtos.py
src/adapters/inbound/mappers/: user.py  user_dto_mapper.py  user_dtos_mapper.py
src/adapters/outbound/: __init__.py
src/adapters/outbound/config/: __init__.py  crypto.py  db.py
src/adapters/outbound/libs/: __init__.py  email_crypto.py
src/adapters/outbound/mappers/: __init__.py  user.py  user_orm_mapper.py
src/application/: __init__.py
src/application/exceptions/: __init__.py  rest.py
src/application/services/: __init__.py  user.py  user_service.py
src/application/validators/: __init__.py  user_validator.py
src/config/: __init__.py  error_handler.py  repositories.py  services.py  user_config.py  user_dependency_config.py
src/domain/models/: user.py
src/domain/shared/: __init__.py  application_exception.py  email_crypto_protocol.py
src/domain/user/: __init__.py  user_model.py  user_repository_protocol.py  user_service.py  user_service_protocol.py  user_validator.py  user_validator_protocol.py
src/infrastructure/libs/: __init__.py
src/ports/inbound/: __init__.py
src/ports/outbound/: __init__.py
stress-tests/: create-and-find-by-id.jmx
tests/: conftest.py
tests/config/: test_error_handler.py
(+47 files in other folders)
